--- a/index.Html
+++ b/index.Html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Israel Store - Loja de Contas Blox Fruit</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0b3d0b;
+      color: #d1f0d1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 1rem;
+    }
+    h1 {
+      margin-bottom: 2rem;
+    }
+    .btn {
+      background: #4caf50;
+      color: #0b3d0b;
+      padding: 1rem 2rem;
+      margin: 1rem;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 1.2rem;
+      box-shadow: 0 0 10px #3c8c3c;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #3c8c3c;
+    }
+  </style>
+</head>
+<body>
+  <h1>Bem-vindo à Israel Store</h1>
+  <a class="btn" href="catalogo.html">Ver Catálogo</a>
+  <a class="btn" href="pedido.html">Fazer Pedido</a>
+</body>
+</html>
