--- a/catalogo.html
+++ b/catalogo.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Catálogo - Israel Store</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #0b3d0b;
+      color: #d1f0d1;
+      margin: 0; padding: 1rem;
+    }
+    header, footer {
+      background: #145214;
+      padding: 1rem; text-align: center;
+    }
+    h1 {
+      margin: 0;
+    }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+    .aviso {
+      text-align: center;
+      padding: 2rem;
+      background: #196219;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #0a2a0a;
+      font-size: 1.2rem;
+      margin-top: 2rem;
+      width: 100%;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Catálogo de Contas - Israel Store</h1>
+  </header>
 
+  <div class="container">
+    <div class="aviso">
+      ⚠️ Nenhuma conta disponível no momento.<br><br>
+      Em breve novas contas serão adicionadas à loja!
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 Israel Store - Todos os direitos reservados
+  </footer>
+</body>
+</html>
