--- a/catalogo.html
+++ b/catalogo.html
@@ -15,9 +15,7 @@
       background: #145214;
       padding: 1rem; text-align: center;
     }
-    h1 {
-      margin: 0;
-    }
+    h1 { margin: 0; }
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -25,35 +23,88 @@
       justify-content: center;
       margin-top: 2rem;
     }
-    .aviso {
-      text-align: center;
-      padding: 2rem;
+    .card {
       background: #196219;
       border-radius: 10px;
       box-shadow: 0 0 10px #0a2a0a;
-      font-size: 1.2rem;
-      margin-top: 2rem;
+      width: 280px;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #d1f0d1;
+      text-align: center;
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #3c8c3c;
+    }
+    .card img {
       width: 100%;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
+      border-radius: 10px;
+      object-fit: cover;
+      max-height: 180px;
+    }
+    .card h2 {
+      margin: 0.5rem 0 0.3rem;
+    }
+    .card p {
+      margin: 0.3rem 0;
+      font-size: 0.9rem;
+    }
+    .btn-whatsapp {
+      margin-top: 1rem;
+      background: #25d366;
+      color: #fff;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      font-weight: bold;
+      box-shadow: 0 0 8px #128c7e;
+      display: inline-block;
+      transition: background 0.3s;
+    }
+    .btn-whatsapp:hover {
+      background: #128c7e;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Catálogo de Contas - Israel Store</h1>
-  </header>
+  <header><h1>Catálogo de Contas - Israel Store</h1></header>
 
   <div class="container">
-    <div class="aviso">
-      ⚠️ Nenhuma conta disponível no momento.<br><br>
-      Em breve novas contas serão adicionadas à loja!
+    <!-- Exemplo de conta 1 -->
+    <div class="card">
+      <img src="https://i.imgur.com/0X6nD1f.png" alt="Conta Dragon" />
+      <h2>Conta Level 2450 - Dragon</h2>
+      <p>Fruta: Dragon</p>
+      <p>Itens: Kabucha, CDK</p>
+      <p><strong>R$ 70,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202450%20-%20Dragon" target="_blank">Comprar via WhatsApp</a>
+    </div>
+
+    <!-- Exemplo de conta 2 -->
+    <div class="card">
+      <img src="https://i.imgur.com/8jqKyqQ.png" alt="Conta Leopard" />
+      <h2>Conta Level 2300 - Leopard</h2>
+      <p>Fruta: Leopard</p>
+      <p>Itens: Dark Blade, Kabucha</p>
+      <p><strong>R$ 65,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202300%20-%20Leopard" target="_blank">Comprar via WhatsApp</a>
+    </div>
+
+    <!-- Exemplo de conta 3 -->
+    <div class="card">
+      <img src="https://i.imgur.com/rzZqH5H.png" alt="Conta Venom" />
+      <h2>Conta Level 2200 - Venom</h2>
+      <p>Fruta: Venom</p>
+      <p>Itens: Dark Blade</p>
+      <p><strong>R$ 60,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202200%20-%20Venom" target="_blank">Comprar via WhatsApp</a>
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 Israel Store - Todos os direitos reservados
-  </footer>
+  <footer>&copy; 2025 Israel Store - Todos os direitos reservados</footer>
 </body>
 </html>
