--- a/catalogo.html
+++ b/catalogo.html
@@ -3,108 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Catálogo - Israel Store</title>
+  <title>Catálogo de Contas - Israel Store</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       background: #0b3d0b;
       color: #d1f0d1;
-      margin: 0; padding: 1rem;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 1rem;
     }
     header, footer {
       background: #145214;
-      padding: 1rem; text-align: center;
+      text-align: center;
+      padding: 1rem;
     }
-    h1 { margin: 0; }
     .container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-      margin-top: 2rem;
+      display: grid;
+      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      max-width: 1000px;
+      margin: 2rem auto;
     }
     .card {
       background: #196219;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #0a2a0a;
-      width: 280px;
       padding: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: #d1f0d1;
+      border-radius: 10px;
       text-align: center;
-      transition: transform 0.3s;
-    }
-    .card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #3c8c3c;
+      box-shadow: 0 0 10px #0a2a0a;
     }
     .card img {
       width: 100%;
+      max-width: 250px;
       border-radius: 10px;
-      object-fit: cover;
-      max-height: 180px;
     }
     .card h2 {
-      margin: 0.5rem 0 0.3rem;
+      margin: 0.7rem 0 0.3rem;
     }
     .card p {
       margin: 0.3rem 0;
-      font-size: 0.9rem;
     }
     .btn-whatsapp {
+      display: inline-block;
       margin-top: 1rem;
-      background: #25d366;
-      color: #fff;
-      text-decoration: none;
+      background: #4caf50;
+      color: #0b3d0b;
       padding: 0.5rem 1rem;
       border-radius: 6px;
+      text-decoration: none;
       font-weight: bold;
-      box-shadow: 0 0 8px #128c7e;
-      display: inline-block;
-      transition: background 0.3s;
     }
     .btn-whatsapp:hover {
-      background: #128c7e;
+      background: #3c8c3c;
     }
   </style>
 </head>
 <body>
-  <header><h1>Catálogo de Contas - Israel Store</h1></header>
+  <header>
+    <h1>Catálogo de Contas - Israel Store</h1>
+  </header>
 
   <div class="container">
-    <!-- Exemplo de conta 1 -->
+
+    <!-- Conta 1: Cleiton -->
     <div class="card">
-      <img src="https://i.imgur.com/0X6nD1f.png" alt="Conta Dragon" />
-      <h2>Conta Level 2450 - Dragon</h2>
-      <p>Fruta: Dragon</p>
-      <p>Itens: Kabucha, CDK</p>
-      <p><strong>R$ 70,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202450%20-%20Dragon" target="_blank">Comprar via WhatsApp</a>
+      <img src="https://i.imgur.com/0X6nD1f.png" alt="Conta Cleiton" />
+      <h2>Conta: Cleiton</h2>
+      <p>🔹 Fruta: Dragon</p>
+      <p>🔹 Nível: 2450</p>
+      <p>🔹 Itens: Dark Blade, Kabucha</p>
+      <p><strong>💵 R$ 70,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Cleiton!" target="_blank">Comprar via WhatsApp</a>
     </div>
 
-    <!-- Exemplo de conta 2 -->
+    <!-- Conta 2 -->
     <div class="card">
-      <img src="https://i.imgur.com/8jqKyqQ.png" alt="Conta Leopard" />
-      <h2>Conta Level 2300 - Leopard</h2>
-      <p>Fruta: Leopard</p>
-      <p>Itens: Dark Blade, Kabucha</p>
-      <p><strong>R$ 65,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202300%20-%20Leopard" target="_blank">Comprar via WhatsApp</a>
+      <img src="https://i.imgur.com/2vO4ldd.png" alt="Conta Leopard" />
+      <h2>Conta: Leopard Master</h2>
+      <p>🔹 Fruta: Leopard</p>
+      <p>🔹 Nível: 2300</p>
+      <p>🔹 Itens: True Triple Katana</p>
+      <p><strong>💵 R$ 60,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Leopard%20Master!" target="_blank">Comprar via WhatsApp</a>
     </div>
 
-    <!-- Exemplo de conta 3 -->
+    <!-- Conta 3 -->
     <div class="card">
-      <img src="https://i.imgur.com/rzZqH5H.png" alt="Conta Venom" />
-      <h2>Conta Level 2200 - Venom</h2>
-      <p>Fruta: Venom</p>
-      <p>Itens: Dark Blade</p>
-      <p><strong>R$ 60,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Level%202200%20-%20Venom" target="_blank">Comprar via WhatsApp</a>
+      <img src="https://i.imgur.com/JuvEPr7.png" alt="Conta Venom" />
+      <h2>Conta: Venom X</h2>
+      <p>🔹 Fruta: Venom</p>
+      <p>🔹 Nível: 2200</p>
+      <p>🔹 Itens: Bisento V2</p>
+      <p><strong>💵 R$ 50,00</strong></p>
+      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Venom%20X!" target="_blank">Comprar via WhatsApp</a>
     </div>
+
   </div>
 
-  <footer>&copy; 2025 Israel Store - Todos os direitos reservados</footer>
+  <footer>
+    &copy; 2025 Israel Store - Todas as contas são testadas e seguras
+  </footer>
 </body>
 </html>
