--- a/catalogo.html
+++ b/catalogo.html
@@ -1,106 +1,91 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Catálogo de Contas - Israel Store</title>
+  <title>Fazer Pedido - Israel Store</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
       background: #0b3d0b;
       color: #d1f0d1;
-      font-family: Arial, sans-serif;
-      margin: 0;
       padding: 1rem;
     }
     header, footer {
       background: #145214;
-      text-align: center;
       padding: 1rem;
+      text-align: center;
     }
-    .container {
-      display: grid;
-      gap: 1.5rem;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      max-width: 1000px;
+    form {
+      max-width: 400px;
       margin: 2rem auto;
-    }
-    .card {
       background: #196219;
       padding: 1rem;
       border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 0 10px #0a2a0a;
     }
-    .card img {
-      width: 100%;
-      max-width: 250px;
-      border-radius: 10px;
-    }
-    .card h2 {
-      margin: 0.7rem 0 0.3rem;
-    }
-    .card p {
-      margin: 0.3rem 0;
-    }
-    .btn-whatsapp {
-      display: inline-block;
+    label {
+      display: block;
       margin-top: 1rem;
+    }
+    input {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.3rem;
+      border-radius: 5px;
+      border: none;
+      font-size: 1rem;
+    }
+    button {
+      margin-top: 1.5rem;
       background: #4caf50;
       color: #0b3d0b;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      text-decoration: none;
+      border: none;
+      padding: 0.7rem;
+      width: 100%;
       font-weight: bold;
+      font-size: 1.1rem;
+      border-radius: 6px;
+      cursor: pointer;
     }
-    .btn-whatsapp:hover {
+    button:hover {
       background: #3c8c3c;
+    }
+    .qr {
+      text-align: center;
+      margin-top: 2rem;
+    }
+    .qr img {
+      width: 200px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #0a2a0a;
+    }
+    .info {
+      text-align: center;
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      user-select: all;
+      cursor: pointer;
+      background: #145214;
+      padding: 0.5rem;
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Catálogo de Contas - Israel Store</h1>
-  </header>
+  <header><h1>Fazer Pedido - Israel Store</h1></header>  <form id="pedidoForm">
+    <label for="username">Nome do usuário Roblox:</label>
+    <input type="text" id="username" name="username" required placeholder="Digite seu usuário" /><label for="conta">Conta Selecionada:</label>
+<input type="text" id="conta" name="conta" readonly required />
 
-  <div class="container">
+<button type="submit">Gerar QR Code Pix</button>
 
-    <!-- Conta 1: Cleiton -->
-    <div class="card">
-      <img src="https://i.imgur.com/0X6nD1f.png" alt="Conta Cleiton" />
-      <h2>Conta: Cleiton</h2>
-      <p>🔹 Fruta: Dragon</p>
-      <p>🔹 Nível: 2450</p>
-      <p>🔹 Itens: Dark Blade, Kabucha</p>
-      <p><strong>💵 R$ 70,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Cleiton!" target="_blank">Comprar via WhatsApp</a>
-    </div>
-
-    <!-- Conta 2 -->
-    <div class="card">
-      <img src="https://i.imgur.com/2vO4ldd.png" alt="Conta Leopard" />
-      <h2>Conta: Leopard Master</h2>
-      <p>🔹 Fruta: Leopard</p>
-      <p>🔹 Nível: 2300</p>
-      <p>🔹 Itens: True Triple Katana</p>
-      <p><strong>💵 R$ 60,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Leopard%20Master!" target="_blank">Comprar via WhatsApp</a>
-    </div>
-
-    <!-- Conta 3 -->
-    <div class="card">
-      <img src="https://i.imgur.com/JuvEPr7.png" alt="Conta Venom" />
-      <h2>Conta: Venom X</h2>
-      <p>🔹 Fruta: Venom</p>
-      <p>🔹 Nível: 2200</p>
-      <p>🔹 Itens: Bisento V2</p>
-      <p><strong>💵 R$ 50,00</strong></p>
-      <a class="btn-whatsapp" href="https://wa.me/5551997097814?text=Olá,%20quero%20comprar%20a%20Conta%20Venom%20X!" target="_blank">Comprar via WhatsApp</a>
-    </div>
-
-  </div>
-
-  <footer>
-    &copy; 2025 Israel Store - Todas as contas são testadas e seguras
-  </footer>
-</body>
-</html>
+  </form>  <div class="qr" id="qrSection" style="display:none;">
+    <p>Pague via Pix com o QR Code abaixo:</p>
+    <img src="https://chart.googleapis.com/chart?cht=qr&chl=pix:israel@pix.com.br&chs=200x200&choe=UTF-8&chld=L|2" alt="QR Code Pix" />
+    <div class="info" id="pixKey" onclick="copyPixKey()">Chave Pix: israel@pix.com.br (clique para copiar)</div>
+    <p>Após o pagamento, envie seu comprovante pelo WhatsApp:</p>
+    <a href="https://wa.me/5551997097814?text=Olá,%20já%20paguei%20e%20quero%20receber%20minha%20conta" target="_blank" style="color:#4caf50; font-weight:bold;">Enviar no WhatsApp</a>
+  </div>  <footer>&copy; 2025 Israel Store</footer>  <script>
+    // Pega a conta da URL e preenche o campo
+    const urlParams = new URLSearchParams(window.location.search);
+    const conta = urlParams.get('conta');
+    document.getElementById
