--- a/index.html
+++ b/index.html
@@ -1,45 +1,196 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Israel Store - Loja de Contas Blox Fruit</title>
+  <title>Israel Store - Produtos Digitais</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0b3d0b;
-      color: #d1f0d1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #0b3d0b, #0f4d0f);
+      color: #fff;
       margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #0e5c0e;
+      padding: 2rem 1rem;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      color: #cfffcc;
+      text-shadow: 1px 1px 2px #000;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+      color: #e0ffe0;
+    }
+    footer {
+      background: #145214;
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #c4f4c4;
+    }
+    .catalogo {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
       padding: 1rem;
     }
-    h1 {
-      margin-bottom: 2rem;
+    .produto {
+      background: #196219;
+      padding: 1rem;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 0 10px #000;
+      transition: transform 0.2s;
     }
-    .btn {
+    .produto:hover {
+      transform: scale(1.03);
+    }
+    .produto img {
+      width: 100%;
+      max-height: 180px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .produto h3 {
+      margin: 0.5rem 0;
+    }
+    .produto button {
       background: #4caf50;
       color: #0b3d0b;
-      padding: 1rem 2rem;
-      margin: 1rem;
+      border: none;
+      padding: 0.6rem;
       font-weight: bold;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      box-shadow: 0 0 10px #3c8c3c;
-      transition: background 0.3s;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 100%;
     }
-    .btn:hover {
+    .produto button:hover {
       background: #3c8c3c;
+    }
+    .qr, .info {
+      text-align: center;
+      padding: 1rem;
+    }
+    .qr img {
+      width: 200px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #0a2a0a;
+    }
+    .info {
+      background: #145214;
+      padding: 0.5rem;
+      border-radius: 6px;
+      margin: 1rem auto;
+      width: fit-content;
+      user-select: all;
+      cursor: pointer;
+    }
+    h2 {
+      text-align: center;
+      margin-top: 2rem;
+      color: #bfffbf;
+    }
+    h2 i {
+      margin-right: 0.5rem;
+      color: #ffffcc;
     }
   </style>
 </head>
 <body>
-  <h1>Bem-vindo à Israel Store</h1>
-  <a class="btn" href="catalogo.html">Ver Catálogo</a>
-  <a class="btn" href="pedido.html">Fazer Pedido</a>
-</body>
+  <header>
+    <h1><i class="bi bi-cart4"></i> Israel Store</h1>
+    <p>Compre Contas de Blox Fruits, Robux e Diamantes com Pix rápido!</p>
+  </header>  <h2><i class="bi bi-controller"></i>Contas de Blox Fruits</h2>
+  <section class="catalogo">
+    <div class="produto">
+      <img src="https://i.imgur.com/yQtxzJU.jpeg" alt="Dragon">
+      <h3>Level 2450 - Dragon</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 80,00</p>
+      <button onclick="comprar('Conta Level 2450 - Dragon')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/IGpbkbn.jpeg" alt="Leopard">
+      <h3>Level 2400 - Leopard</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 75,00</p>
+      <button onclick="comprar('Conta Level 2400 - Leopard')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/3R2yRwm.jpeg" alt="Dough">
+      <h3>Level 2350 - Dough + Haki V2</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 70,00</p>
+      <button onclick="comprar('Conta Level 2350 - Dough + Haki V2')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+  </section>  <h2><i class="bi bi-box"></i>Robux</h2>
+  <section class="catalogo">
+    <div class="produto">
+      <img src="https://i.imgur.com/t2rR0iI.png" alt="100 Robux">
+      <h3>100 Robux</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 10,00</p>
+      <button onclick="comprar('100 Robux - R$ 10')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/t2rR0iI.png" alt="500 Robux">
+      <h3>500 Robux</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 40,00</p>
+      <button onclick="comprar('500 Robux - R$ 40')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/t2rR0iI.png" alt="1000 Robux">
+      <h3>1000 Robux</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 70,00</p>
+      <button onclick="comprar('1000 Robux - R$ 70')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+  </section>  <h2><i class="bi bi-gem"></i>Diamantes Free Fire</h2>
+  <section class="catalogo">
+    <div class="produto">
+      <img src="https://i.imgur.com/GuUyH2S.png" alt="100 Diamantes">
+      <h3>100 Diamantes</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 7,00</p>
+      <button onclick="comprar('100 Diamantes FF - R$ 7')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/GuUyH2S.png" alt="500 Diamantes">
+      <h3>500 Diamantes</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 32,00</p>
+      <button onclick="comprar('500 Diamantes FF - R$ 32')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+    <div class="produto">
+      <img src="https://i.imgur.com/GuUyH2S.png" alt="1000 Diamantes">
+      <h3>1000 Diamantes</h3>
+      <p><i class="bi bi-currency-dollar"></i> R$ 60,00</p>
+      <button onclick="comprar('1000 Diamantes FF - R$ 60')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    </div>
+  </section>  <div class="qr">
+    <h3><i class="bi bi-qr-code"></i> Pague via Pix:</h3>
+    <img src="https://chart.googleapis.com/chart?cht=qr&chl=pix:israel@pix.com.br&chs=200x200&choe=UTF-8&chld=L|2" alt="QR Code Pix" />
+    <div class="info" onclick="copyPix()"><i class="bi bi-clipboard"></i> Chave Pix: israel@pix.com.br</div>
+  </div>  <div class="qr">
+    <p>Após pagar, clique abaixo para enviar o comprovante:</p>
+    <a href="#" id="whatsLink" target="_blank">
+      <button style="background: #25d366; color: white;"><i class="bi bi-whatsapp"></i> Enviar via WhatsApp</button>
+    </a>
+  </div>  <footer>
+    <p>&copy; 2025 Israel Store - Todos os direitos reservados</p>
+  </footer>  <script>
+    function comprar(produto) {
+      const link = `https://wa.me/5551997097814?text=Olá!%20Acabei%20de%20pagar%20o%20produto:%20${encodeURIComponent(produto)}.%20Segue%20o%20comprovante.`;
+      document.getElementById("whatsLink").href = link;
+      window.scrollTo({ top: document.body.scrollHeight, behavior: "smooth" });
+    }
+
+    function copyPix() {
+      navigator.clipboard.writeText("israel@pix.com.br").then(() => {
+        alert("Chave Pix copiada!");
+      });
+    }
+  </script></body>
 </html>
