--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Israel Store - Produtos Digitais</title>
+  <title>Israel Store - Entrega Automática</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
@@ -29,18 +29,19 @@
       font-size: 1.1rem;
       color: #e0ffe0;
     }
-    footer {
-      background: #145214;
-      padding: 1rem;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #c4f4c4;
-    }
     .catalogo {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1rem;
-      padding: 1rem;
+      padding: 2rem 1rem;
+    }
+    .secao {
+      margin-top: 2rem;
+    }
+    .secao h2 {
+      text-align: center;
+      color: #bfffbf;
+      margin-bottom: 1rem;
     }
     .produto {
       background: #196219;
@@ -52,12 +53,6 @@
     }
     .produto:hover {
       transform: scale(1.03);
-    }
-    .produto img {
-      width: 100%;
-      max-height: 180px;
-      object-fit: cover;
-      border-radius: 10px;
     }
     .produto h3 {
       margin: 0.5rem 0;
@@ -76,121 +71,77 @@
     .produto button:hover {
       background: #3c8c3c;
     }
-    .qr, .info {
-      text-align: center;
-      padding: 1rem;
-    }
-    .qr img {
-      width: 200px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #0a2a0a;
-    }
-    .info {
+    footer {
       background: #145214;
-      padding: 0.5rem;
-      border-radius: 6px;
-      margin: 1rem auto;
-      width: fit-content;
-      user-select: all;
-      cursor: pointer;
-    }
-    h2 {
+      padding: 1rem;
       text-align: center;
-      margin-top: 2rem;
-      color: #bfffbf;
+      font-size: 0.9rem;
+      color: #c4f4c4;
     }
-    h2 i {
-      margin-right: 0.5rem;
-      color: #ffffcc;
+    .entrega {
+      background: #145214;
+      margin: 1rem auto;
+      padding: 1rem;
+      border-radius: 8px;
+      text-align: center;
+      max-width: 500px;
+      display: none;
+    }
+    .entrega h3 {
+      margin-bottom: 0.5rem;
+    }
+    #infoEntrega {
+      background: #0f4f0f;
+      padding: 0.8rem;
+      border-radius: 6px;
+      font-family: monospace;
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1><i class="bi bi-cart4"></i> Israel Store</h1>
-    <p>Compre Contas de Blox Fruits, Robux e Diamantes com Pix rápido!</p>
-  </header>  <h2><i class="bi bi-controller"></i>Contas de Blox Fruits</h2>
-  <section class="catalogo">
-    <div class="produto">
-      <img src="https://i.imgur.com/yQtxzJU.jpeg" alt="Dragon">
-      <h3>Level 2450 - Dragon</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 80,00</p>
-      <button onclick="comprar('Conta Level 2450 - Dragon')"><i class="bi bi-whatsapp"></i> Comprar</button>
+    <p>Compra 100% automática de contas Roblox, Robux e Diamantes</p>
+  </header>  <section class="secao">
+    <h2><i class="bi bi-person-badge"></i> Contas Blox Fruits</h2>
+    <div class="catalogo">
+      <div class="produto">
+        <h3>Conta Level 2450 - Dragon</h3>
+        <p><i class="bi bi-currency-dollar"></i> R$ 80,00</p>
+        <button onclick="entregar('Usuário: Cleiton\nSenha: 1234')">Comprar Agora</button>
+      </div>
     </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/IGpbkbn.jpeg" alt="Leopard">
-      <h3>Level 2400 - Leopard</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 75,00</p>
-      <button onclick="comprar('Conta Level 2400 - Leopard')"><i class="bi bi-whatsapp"></i> Comprar</button>
+  </section>  <section class="secao">
+    <h2><i class="bi bi-box"></i> Robux</h2>
+    <div class="catalogo">
+      <div class="produto">
+        <h3>500 Robux</h3>
+        <p><i class="bi bi-currency-dollar"></i> R$ 40,00</p>
+        <button onclick="entregar('Código Robux: ROBUX-500-GRT98')">Comprar Agora</button>
+      </div>
     </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/3R2yRwm.jpeg" alt="Dough">
-      <h3>Level 2350 - Dough + Haki V2</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 70,00</p>
-      <button onclick="comprar('Conta Level 2350 - Dough + Haki V2')"><i class="bi bi-whatsapp"></i> Comprar</button>
+  </section>  <section class="secao">
+    <h2><i class="bi bi-gem"></i> Diamantes Free Fire</h2>
+    <div class="catalogo">
+      <div class="produto">
+        <h3>1000 Diamantes</h3>
+        <p><i class="bi bi-currency-dollar"></i> R$ 60,00</p>
+        <button onclick="entregar('ID Free Fire: 99887766')">Comprar Agora</button>
+      </div>
     </div>
-  </section>  <h2><i class="bi bi-box"></i>Robux</h2>
-  <section class="catalogo">
-    <div class="produto">
-      <img src="https://i.imgur.com/t2rR0iI.png" alt="100 Robux">
-      <h3>100 Robux</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 10,00</p>
-      <button onclick="comprar('100 Robux - R$ 10')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/t2rR0iI.png" alt="500 Robux">
-      <h3>500 Robux</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 40,00</p>
-      <button onclick="comprar('500 Robux - R$ 40')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/t2rR0iI.png" alt="1000 Robux">
-      <h3>1000 Robux</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 70,00</p>
-      <button onclick="comprar('1000 Robux - R$ 70')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-  </section>  <h2><i class="bi bi-gem"></i>Diamantes Free Fire</h2>
-  <section class="catalogo">
-    <div class="produto">
-      <img src="https://i.imgur.com/GuUyH2S.png" alt="100 Diamantes">
-      <h3>100 Diamantes</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 7,00</p>
-      <button onclick="comprar('100 Diamantes FF - R$ 7')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/GuUyH2S.png" alt="500 Diamantes">
-      <h3>500 Diamantes</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 32,00</p>
-      <button onclick="comprar('500 Diamantes FF - R$ 32')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-    <div class="produto">
-      <img src="https://i.imgur.com/GuUyH2S.png" alt="1000 Diamantes">
-      <h3>1000 Diamantes</h3>
-      <p><i class="bi bi-currency-dollar"></i> R$ 60,00</p>
-      <button onclick="comprar('1000 Diamantes FF - R$ 60')"><i class="bi bi-whatsapp"></i> Comprar</button>
-    </div>
-  </section>  <div class="qr">
-    <h3><i class="bi bi-qr-code"></i> Pague via Pix:</h3>
-    <img src="https://chart.googleapis.com/chart?cht=qr&chl=pix:israel@pix.com.br&chs=200x200&choe=UTF-8&chld=L|2" alt="QR Code Pix" />
-    <div class="info" onclick="copyPix()"><i class="bi bi-clipboard"></i> Chave Pix: israel@pix.com.br</div>
-  </div>  <div class="qr">
-    <p>Após pagar, clique abaixo para enviar o comprovante:</p>
-    <a href="#" id="whatsLink" target="_blank">
-      <button style="background: #25d366; color: white;"><i class="bi bi-whatsapp"></i> Enviar via WhatsApp</button>
-    </a>
+  </section>  <div class="entrega" id="entregaBox">
+    <h3><i class="bi bi-gift"></i> Entrega Automática</h3>
+    <p>Seu produto foi liberado automaticamente:</p>
+    <div id="infoEntrega"></div>
+    <p style="margin-top:1rem;"><i class="bi bi-emoji-smile"></i> Obrigado pela compra!</p>
   </div>  <footer>
-    <p>&copy; 2025 Israel Store - Todos os direitos reservados</p>
+    <p>&copy; 2025 Israel Store - Entregas automáticas via HTML</p>
   </footer>  <script>
-    function comprar(produto) {
-      const link = `https://wa.me/5551997097814?text=Olá!%20Acabei%20de%20pagar%20o%20produto:%20${encodeURIComponent(produto)}.%20Segue%20o%20comprovante.`;
-      document.getElementById("whatsLink").href = link;
-      window.scrollTo({ top: document.body.scrollHeight, behavior: "smooth" });
-    }
-
-    function copyPix() {
-      navigator.clipboard.writeText("israel@pix.com.br").then(() => {
-        alert("Chave Pix copiada!");
-      });
+    function entregar(dados) {
+      document.getElementById('entregaBox').style.display = 'block';
+      document.getElementById('infoEntrega').textContent = dados;
+      document.getElementById('entregaBox').scrollIntoView({behavior: 'smooth'});
     }
   </script></body>
 </html>
