--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html><html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Israel Store - Entrega Automática</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -57,6 +58,12 @@
     .produto h3 {
       margin: 0.5rem 0;
     }
+    .produto p.price {
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+      color: #aaffaa;
+    }
     .produto button {
       background: #4caf50;
       color: #0b3d0b;
@@ -77,6 +84,7 @@
       text-align: center;
       font-size: 0.9rem;
       color: #c4f4c4;
+      margin-top: 2rem;
     }
     .entrega {
       background: #145214;
@@ -84,7 +92,7 @@
       padding: 1rem;
       border-radius: 8px;
       text-align: center;
-      max-width: 500px;
+      max-width: 600px;
       display: none;
     }
     .entrega h3 {
@@ -96,52 +104,98 @@
       border-radius: 6px;
       font-family: monospace;
       font-size: 1.1rem;
+      white-space: pre-wrap;
     }
   </style>
 </head>
 <body>
   <header>
     <h1><i class="bi bi-cart4"></i> Israel Store</h1>
-    <p>Compra 100% automática de contas Roblox, Robux e Diamantes</p>
-  </header>  <section class="secao">
+    <p>Compra 100% automática de contas Roblox, Robux e Diamantes Free Fire</p>
+  </header>
+
+  <section class="secao">
     <h2><i class="bi bi-person-badge"></i> Contas Blox Fruits</h2>
     <div class="catalogo">
       <div class="produto">
         <h3>Conta Level 2450 - Dragon</h3>
-        <p><i class="bi bi-currency-dollar"></i> R$ 80,00</p>
-        <button onclick="entregar('Usuário: Cleiton\nSenha: 1234')">Comprar Agora</button>
+        <p class="price">R$ 80,00</p>
+        <button onclick="entregar('Usuário: Cleiton\\nSenha: 1234')">Comprar Agora</button>
+      </div>
+      <div class="produto">
+        <h3>Conta Level 2300 - Leopard</h3>
+        <p class="price">R$ 75,00</p>
+        <button onclick="entregar('Usuário: Daniel\\nSenha: 5678')">Comprar Agora</button>
+      </div>
+      <div class="produto">
+        <h3>Conta Level 2200 - Venom</h3>
+        <p class="price">R$ 70,00</p>
+        <button onclick="entregar('Usuário: Lucas\\nSenha: 91011')">Comprar Agora</button>
       </div>
     </div>
-  </section>  <section class="secao">
+  </section>
+
+  <section class="secao">
     <h2><i class="bi bi-box"></i> Robux</h2>
     <div class="catalogo">
       <div class="produto">
         <h3>500 Robux</h3>
-        <p><i class="bi bi-currency-dollar"></i> R$ 40,00</p>
+        <p class="price">R$ 40,00</p>
         <button onclick="entregar('Código Robux: ROBUX-500-GRT98')">Comprar Agora</button>
       </div>
+      <div class="produto">
+        <h3>1000 Robux</h3>
+        <p class="price">R$ 75,00</p>
+        <button onclick="entregar('Código Robux: ROBUX-1000-HY72J')">Comprar Agora</button>
+      </div>
+      <div class="produto">
+        <h3>2000 Robux</h3>
+        <p class="price">R$ 140,00</p>
+        <button onclick="entregar('Código Robux: ROBUX-2000-XY98P')">Comprar Agora</button>
+      </div>
     </div>
-  </section>  <section class="secao">
+  </section>
+
+  <section class="secao">
     <h2><i class="bi bi-gem"></i> Diamantes Free Fire</h2>
     <div class="catalogo">
       <div class="produto">
         <h3>1000 Diamantes</h3>
-        <p><i class="bi bi-currency-dollar"></i> R$ 60,00</p>
+        <p class="price">R$ 60,00</p>
         <button onclick="entregar('ID Free Fire: 99887766')">Comprar Agora</button>
       </div>
+      <div class="produto">
+        <h3>2000 Diamantes</h3>
+        <p class="price">R$ 115,00</p>
+        <button onclick="entregar('ID Free Fire: 44556677')">Comprar Agora</button>
+      </div>
+      <div class="produto">
+        <h3>5000 Diamantes</h3>
+        <p class="price">R$ 275,00</p>
+        <button onclick="entregar('ID Free Fire: 11223344')">Comprar Agora</button>
+      </div>
     </div>
-  </section>  <div class="entrega" id="entregaBox">
+  </section>
+
+  <div class="entrega" id="entregaBox">
     <h3><i class="bi bi-gift"></i> Entrega Automática</h3>
     <p>Seu produto foi liberado automaticamente:</p>
     <div id="infoEntrega"></div>
     <p style="margin-top:1rem;"><i class="bi bi-emoji-smile"></i> Obrigado pela compra!</p>
-  </div>  <footer>
+  </div>
+
+  <footer>
     <p>&copy; 2025 Israel Store - Entregas automáticas via HTML</p>
-  </footer>  <script>
+  </footer>
+
+  <script>
     function entregar(dados) {
-      document.getElementById('entregaBox').style.display = 'block';
-      document.getElementById('infoEntrega').textContent = dados;
-      document.getElementById('entregaBox').scrollIntoView({behavior: 'smooth'});
+      const entregaBox = document.getElementById('entregaBox');
+      const infoEntrega = document.getElementById('infoEntrega');
+      entregaBox.style.display = 'block';
+      infoEntrega.textContent = dados;
+      entregaBox.scrollIntoView({behavior: 'smooth'});
     }
-  </script></body>
+  </script>
+</body>
 </html>
